refactor(workflow): 重构工作流变量聚合和节点处理逻辑
- 调整变量重置方法中的节点名称获取逻辑
- 将跳过节点处理改为异步执行方式
- 更新知识工作流中起始节点的过滤条件
- 修复节点查询方法以直接从配置中获取节点实例